# analiseSamambaia

./: README.md  analise_codigo_completo_imoveis.py  analise_imoveis.py  main.py  pyproject.toml  requeriments.txt
dados/: imoveis_samambaia.csv  imoveis_samambaia_coordenadas.csv
